home, showOff 게시판 썸네일 1개만 출력되도록 수정 게시판 목록에서 시분 출력 추가 게시판 상세글에서는 시분초 출력 추가 비밀글인 경우 권한 없는자가 클릭시 권한이 없습니다 alert창 출력 권한 없는 아이디로 url 강제 접근시 오류페이지로 보내짐 에러페이지, footer 고정형으로 변경

--- a/src/main/resources/static/css/error/accessDenied.css
+++ b/src/main/resources/static/css/error/accessDenied.css
@@ -1,3 +1,35 @@
+body {
+    min-width: 1200px;
+}
+
+.container {
+    width: 800px;
+    min-height: 650px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.content {
+    width: 800px;
+    height: 100%;
+}
+
+.noSearch {
+    height: 100%;
+}
+
+.noSearch img {
+    height: 300px;
+}
+
+.errorMessage {
+    color: #67cafe;
+    font-size: 25px;
+    white-space: nowrap;
+}
+
 .home-button {
     background-color: white;
     border: 1px solid #67cafe;
