--- a/src/main/resources/static/css/include/footer.css
+++ b/src/main/resources/static/css/include/footer.css
@@ -6,13 +6,32 @@
 
 .footer-nav img {
     margin-right: 15px;
+    width: 120px;
+    height: 120px;
 }
 
 .footer-nav {
     margin-left: 15px;
-
+    min-width: 540px;
 }
-.nav-item {
-    list-style-type: none;
+
+.footer-nav div {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: flex-start;
+}
+
+.contact {
+    margin-bottom: 5px;
+}
+.copyright {
+    margin-bottom: 20px;
+}
+
+.footprint img {
+    width: 50px;
+    transform: rotate(300deg);
 }
 
