--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -85,8 +85,8 @@
 
                             <!--비밀글이 아닐때-->
                             <td class="align-middle listOne" th:if="${dto.secret==false} or (${dto.secret == true} and (${username} == ${dto.userId})) or ((${dto.secret == true} and (${username} != ${dto.userId}))and(${role ne 'ROLE_USER'}))">
-                                <a th:href="@{'/board/read/'+${dto.postNo}}">
-                                    <div class="d-flex align-items-center listPost">
+                                <a class="move" href="#" th:attr="data-postNo=${dto.postNo}, data-secret=${dto.secret}, data-userId=${dto.userId}">
+                                    <div class="d-flex align-items-center">
                                         <div class="replyAuth" th:if="${dto.replyAuth==true}">
                                             <img class="replyAuthImg" src="/img/tag/vetScope.png" alt="수의사만 답변 가능">
                                         </div>
@@ -127,11 +127,11 @@
                                                     <img class="level" src="/img/level/purple.png" alt="User Level Image"
                                                          th:if="${dto.exp >= 3000}">
                                                 </span>
-                                                <span class="mx-1">조회수 <span th:text="${dto?.viewCount}">5</span></span>
+                                                <span class="mx-1"> <span th:text="${dto?.viewCount}">5</span></span>
                                                 <span class="mx-1" th:if="${dto?.modDate == null}"
-                                                      th:text="${#temporals.format(dto.regDate, 'yyyy-MM-dd')}">작성일</span>
+                                                      th:text="${#temporals.format(dto.regDate, 'yyyy-MM-dd HH:mm')}"></span>
                                                 <span class="mx-1" th:if="${dto?.modDate != null}"
-                                                      th:text="${#temporals.format(dto?.modDate, 'yyyy-MM-dd')}">작성일</span>
+                                                      th:text="${#temporals.format(dto?.modDate, 'yyyy-MM-dd HH:mm')}"></span>
                                             </div> <!--title sub-->
                                         </div>
                                     </div>
@@ -147,7 +147,7 @@
                             <!--비밀글일때-->
                             <td class="align-middle listOne" colspan="2" th:if="((${dto.secret==true} and (${username} != ${dto.userId}))and(${role eq 'ROLE_USER'}))">
                                 <!--비밀글여부-->
-                                <a th:href="@{'/board/read/'+${dto.postNo}}" class="d-flex align-items-center">
+                                <a class="d-flex align-items-center move" href="#" th:attr="data-postNo=${dto.postNo}, data-secret=${dto.secret}, data-userId=${dto.userId}">
                                 <span class="icon secret">
                                      <i class="bi bi-file-lock d-flex flex-fill"></i>
                                 </span>
@@ -389,5 +389,39 @@
             });
         }
     });
+
+    // 비밀글 접근 권한 설정
+    document.addEventListener("DOMContentLoaded", function () {
+        const moves = document.querySelectorAll(".move");
+
+        moves.forEach(function (move) {
+            move.addEventListener("click", function (e) {
+                e.preventDefault();
+
+                let role = '[[${role}]]';
+                console.log(role)
+                let username = '[[${username}]]';
+                console.log(username)
+                let userId = this.getAttribute("data-userId");
+                console.log(userId)
+                let postNo = this.getAttribute("data-postNo");
+                console.log(postNo)
+                let secret = this.getAttribute("data-secret");
+                console.log(secret)
+
+                if (secret === 'true') {
+                    if (role === 'ROLE_ADMIN' || role === 'ROLE_VET' || username === userId) {
+                        location.href = '/board/read/' + postNo;
+                    } else {
+                        alert('접근 권한이 없습니다.');
+                    }
+                } else {
+                    // 비밀글이 아닌 경우
+                    location.href = '/board/read/' + postNo;
+                }
+            });
+        });
+    });
+
 </script>
 </html>
