--- a/src/main/resources/templates/board/read.html
+++ b/src/main/resources/templates/board/read.html
@@ -76,9 +76,9 @@
                                          th:if="${postDTO.exp >= 3000}">
                                 </span>
                                 <span th:if="${postDTO.modDate == null}"
-                                      th:text="${#temporals.format(postDTO.regDate, 'yyyy-MM-dd')}">작성일</span>
+                                      th:text="${#temporals.format(postDTO.regDate, 'yyyy-MM-dd HH:mm:ss')}"></span>
                                 <span th:if="${postDTO.modDate != null}"
-                                      th:text="${#temporals.format(postDTO.modDate, 'yyyy-MM-dd')}">작성일</span>
+                                      th:text="${#temporals.format(postDTO.modDate, 'yyyy-MM-dd HH:mm:ss')}"></span>
                             </div>
                         </td>
                         <td class="align-middle text-end count">
@@ -201,7 +201,7 @@
                             <div>
                                 <span class="card-title" th:text="${reply.nickname}">작성자 이름</span>
                                 <small class="text-muted"
-                                       th:text="${#temporals.format(reply.regDate, 'yyyy-MM-dd HH:mm:ss')}">작성일</small>
+                                       th:text="${#temporals.format(reply.regDate, 'yyyy-MM-dd HH:mm:ss')}"></small>
                                 <div class="card-footer" th:text="${reply.replyContent}">댓글 내용</div>
                             </div>
                             <div class="justify-content-end btnSection">
@@ -263,7 +263,7 @@
                             <tr class="postList" th:each="dto:${responseDTO.dtoList}">
                                 <!-- 게시글이 비밀글이 아닐 때 -->
                                 <td class="align-middle listOne" th:if="${dto.secret==false} or (${dto.secret == true} and (${username} == ${dto.userId})) or ((${dto.secret == true} and (${username} != ${dto.userId}))and(${role ne 'ROLE_USER'}))">
-                                    <a th:href="@{'/board/read/'+${dto.postNo}}">
+                                    <a class="move" href="#" th:attr="data-postNo=${dto.postNo}, data-secret=${dto.secret}, data-userId=${dto.userId}">
                                         <!--                                        <a class="readDetail" th:attr="data-postNo=${dto.postNo}">-->
                                         <span class="align-middle" th:if="${dto.replyAuth==true}">
                                             <img class="replyAuthImg" src="/img/tag/vetScope.png" alt="수의사만 답변 가능">
@@ -306,9 +306,9 @@
                                         </span>
                                         <span class="mx-1">조회수 <span th:text="${dto?.viewCount}">5</span></span>
                                         <span class="mx-1" th:if="${dto?.modDate == null}"
-                                              th:text="${#temporals.format(dto.regDate, 'yyyy-MM-dd')}">작성일</span>
+                                              th:text="${#temporals.format(dto.regDate, 'yyyy-MM-dd HH:mm')}"></span>
                                         <span class="mx-1" th:if="${dto?.modDate != null}"
-                                              th:text="${#temporals.format(dto?.modDate, 'yyyy-MM-dd')}">작성일</span>
+                                              th:text="${#temporals.format(dto?.modDate, 'yyyy-MM-dd HH:mm')}"></span>
                                     </div>
                                 </td>
                                 <td class="text-end align-middle reply" th:if="${dto.secret==false} or (${dto.secret == true} and (${username} == ${dto.userId})) or ((${dto.secret == true} and (${username} != ${dto.userId}))and(${role ne 'ROLE_USER'}))">
@@ -322,7 +322,7 @@
                                 <!--비밀글일때-->
                                 <td class="align-middle listOne" colspan="2" th:if="((${dto.secret==true} and (${username} != ${dto.userId}))and(${role eq 'ROLE_USER'}))">
                                     <!--비밀글여부-->
-                                    <a th:href="@{'/board/read/'+${dto.postNo}}" class="d-flex align-items-center">
+                                    <a class="d-flex align-items-center move" href="#" th:attr="data-postNo=${dto.postNo}, data-secret=${dto.secret}, data-userId=${dto.userId}">
                                 <span class="icon listSecret">
                                      <i class="bi bi-file-lock d-flex flex-fill"></i>
                                 </span>
@@ -895,6 +895,39 @@
                 cell.style.borderBottom = "none"; // 모든 td의 밑줄 제거
             });
         }
+    });
+
+    // 비밀글 접근 권한 설정
+    document.addEventListener("DOMContentLoaded", function () {
+        const moves = document.querySelectorAll(".move");
+
+        moves.forEach(function (move) {
+            move.addEventListener("click", function (e) {
+                e.preventDefault();
+
+                let role = '[[${role}]]';
+                console.log(role)
+                let username = '[[${username}]]';
+                console.log(username)
+                let userId = this.getAttribute("data-userId");
+                console.log(userId)
+                let postNo = this.getAttribute("data-postNo");
+                console.log(postNo)
+                let secret = this.getAttribute("data-secret");
+                console.log(secret)
+
+                if (secret === 'true') {
+                    if (role === 'ROLE_ADMIN' || role === 'ROLE_VET' || username === userId) {
+                        location.href = '/board/read/' + postNo;
+                    } else {
+                        alert('접근 권한이 없습니다.');
+                    }
+                } else {
+                    // 비밀글이 아닌 경우
+                    location.href = '/board/read/' + postNo;
+                }
+            });
+        });
     });
 
     // document.querySelector(".readDetail").addEventListener("click", function (e) {
