--- a/src/main/resources/templates/include/footer.html
+++ b/src/main/resources/templates/include/footer.html
@@ -13,16 +13,15 @@
 
     <hr class="mb-0">
     <div class="d-flex justify-content-between">
-        <div class="col-md-4 footer-nav justify-content-start">
-            <img class="bi me-2" th:src="@{/img/logo/logo.png}" width="120" height="120" alt="Logo">
-            <ul>
-                <li class="nav-item">Contact: 1541267@naver.com</li>
-                <li class="nav-item">Copyrightⓒ 2024 DogCat All rights reserved.</li>
-            </ul>
+        <div class="d-flex justify-content-start footer-nav">
+            <img class="bi me-2" th:src="@{/img/logo/logo.png}" alt="Logo">
+            <div>
+                <p class="contact">Contact: 1541267@naver.com</p>
+                <p class="copyright">Copyrightⓒ 2024 DogCat All rights reserved.</p>
+            </div>
         </div>
-        <div class="d-flex p-3 flex-column mx-3 justify-content-center"><img th:src="@{/img/logo/footprint.png}" width="50"
-                                                                         alt="헤더이미지"
-                                                                         style="transform: rotate(300deg);">
+        <div class="d-flex p-3 flex-column mx-3 justify-content-center footprint">
+            <img th:src="@{/img/logo/footprint.png}" alt="헤더이미지">
         </div>
     </div>
 </footer>
