--- a/src/main/resources/templates/error/accessDenied.html
+++ b/src/main/resources/templates/error/accessDenied.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" th:href="@{/css/error/accessDenied.css}">
 </head>
 <body>
-<!--header footer 필요성 확인 필요-->
+<!-- TODO header footer 필요성 확인 필요-->
 <!--<div th:include="include/header :: header"></div>-->
 
 <div class="container">
