Content-Security-Policy

--- a/src/main/resources/templates/home/notice.html
+++ b/src/main/resources/templates/home/notice.html
@@ -2,10 +2,11 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>말랑발자국 - 공지사항</title>
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" th:href="@{/css/styles.css}">
     <link rel="stylesheet" th:href="@{/css/home/notice.css}">
+    <title>말랑발자국 - 공지사항</title>
 </head>
 <body>
 
