--- a/src/main/resources/static/css/summernote/summernote-bs5.css
+++ b/src/main/resources/static/css/summernote/summernote-bs5.css
@@ -511,7 +511,7 @@
     max-width: none;
 }
 .note-popover.popover .popover-content a {
-    display: inline-block;
+    display: none;
     max-width: 200px;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -581,7 +581,7 @@
     padding-left: 5px;
 }
 .note-popover .popover-content .note-color .note-dropdown-menu .note-palette, .note-editor .note-toolbar .note-color .note-dropdown-menu .note-palette {
-    display: inline-block;
+    display: none;
     margin: 0;
     width: 160px;
 }
