--- a/src/main/resources/templates/error/accessDenied.html
+++ b/src/main/resources/templates/error/accessDenied.html
@@ -2,16 +2,14 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>말랑발자국 - 오류</title>
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" th:href="@{/css/styles.css}">
     <link rel="stylesheet" th:href="@{/css/error/accessDenied.css}">
+    <title>말랑발자국 - 오류</title>
 </head>
 <body>
-<!-- TODO header footer 필요성 확인 필요-->
-<!--<div th:include="include/header :: header"></div>-->
-
 <div class="container">
     <div class="content">
         <img class="mx-auto d-block errorPage" src="/img/error/error_page.png" alt="이미지 로드 실패">
@@ -26,7 +24,6 @@
         </button>
     </div>
 </div>
-<!--<div th:include="include/footer :: footer"></div>-->
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </body>
 </html>
