--- a/src/main/resources/templates/report/post-report.html
+++ b/src/main/resources/templates/report/post-report.html
@@ -7,16 +7,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
-
     <link rel="stylesheet" th:href="@{/css/styles.css}">
     <link rel="stylesheet" th:href="@{/css/home.css}">
     <link rel="stylesheet" th:href="@{/css/report/createReport.css}">
-
     <link rel="icon" type="image/x-icon" th:href="@{/favicon.ico}">
     <title>말랑발자국 - 글 신고</title>
-
-
-
 </head>
 <body>
 
@@ -89,7 +84,7 @@
 
         // 자기 자신을 신고하는 경우 처리
         if (reportUser === postOwner) {
-            alert("자기가 자신을 신고할 수 없습니다.");
+            alert("자기 자신을 신고할 수 없습니다.");
             window.close();
             return;
         }
