--- a/src/main/resources/templates/home/home.html
+++ b/src/main/resources/templates/home/home.html
@@ -517,12 +517,13 @@
 
                 const data = { username: username, password: password, autoLogin: autoLogin, rememberMe: rememberMe };
 
-                axios.post("/user/loginProc", null, { params: data })
+                axios.post("/user/loginProc", null, {params: data})
                     .then(res => {
-                        // 로그인 성공 시
                         window.location.href = "/";
                     })
                     .catch(error => {
+                        let redirectUrl = window.location.href;
+
                         if (error.response) {
                             if (error.response.status === 403) {
                                 if (error.response.data === "LOGIN_LOCKED") {
@@ -530,16 +531,16 @@
                                 } else if (error.response.data === "LOGIN_BLOCK") {
                                     alert("관리자에 의해 계정이 차단되었습니다.");
                                 }
-                                window.location.href = "/user/login"; // 로그인 페이지로 이동
                             } else if (error.response.status === 401) {
                                 alert("아이디 또는 비밀번호를 확인하세요.");
-                                window.location.href = "/user/login"; // 로그인 페이지로 이동
                             } else {
                                 alert("알 수 없는 오류가 발생했습니다. 다시 시도해 주세요.");
                             }
                         } else {
                             alert("서버와의 연결에 문제가 발생했습니다.");
                         }
+
+                        window.location.href = redirectUrl;
                     });
             }, false);
         }
