--- a/src/main/resources/templates/user/join.html
+++ b/src/main/resources/templates/user/join.html
@@ -108,11 +108,11 @@
                             <span class="align-self-center mx-1">-</span>
                             <label for="telMiddle"></label>
                             <input type="text" id="telMiddle" class="form-control form-width mx-1" maxlength="4"
-                                   oninput="formatTelInput()" style="width: 116px;" required>
+                                   oninput="formatTelInput()" style="width: 116px;">
                             <span class="align-self-center mx-1">-</span>
                             <label for="telSuffix"></label>
                             <input type="text" id="telSuffix" class="form-control form-width ms-2" maxlength="4"
-                                   oninput="formatTelInput()" style="width: 116px;" required>
+                                   oninput="formatTelInput()" style="width: 116px;">
                         </div>
                         <div id="telFeedback" class="feedback"></div>
                     </div>
