--- a/src/main/resources/templates/admin/user-list.html
+++ b/src/main/resources/templates/admin/user-list.html
@@ -58,7 +58,7 @@
                                 <form class="d-flex input-group justify-content-end" style="width: 30%;"
                                       th:action="@{/admin/user-list}" method="get">
                                     <input type="text" class="form-control" placeholder="검색어 입력" name="keyword"
-                                           th:value="${searchKeyword}">
+                                           th:value="${keyword}">
                                     <button class="btn btn-outline-secondary searchBtn" type="submit">
                                         <i class="bi bi-search"></i>
                                     </button>
