오류 페이지 중앙 정렬 및 수정, 등급표 수정, 통합검색창 box-shadow 삭제, 마이페이지 클래스명 정정

--- a/src/main/resources/static/css/include/header.css
+++ b/src/main/resources/static/css/include/header.css
@@ -67,3 +67,7 @@ nav a {
     font-size: 1.1em;
 }
 
+.form-select:focus, .form-control:focus, .searchBtn:focus {
+    outline: none;
+    box-shadow: none;
+}
