--- a/src/main/resources/templates/home/notice.html
+++ b/src/main/resources/templates/home/notice.html
@@ -47,34 +47,25 @@
                             </h2>
                             <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo">
                                 <div class="accordion-body">
-                                    <div>♣ 경험치는 출석하면 2점, 게시물 작성 시마다 1점씩 부여됩니다. ♣</div><br>
-                                    <div>♣ 등급표 ♣</div><br>
+                                    <div>♣ 경험치는 출석(1일 1회)하거나, 게시물 작성 시마다 부여됩니다. ♣</div><br>
+                                    <div>♣ 등급은 '등급 1'부터 일정 경험치 이상 획득 시 다음 등급으로 승급합니다. ♣</div><br>
                                     <div>
                                         <table class="levelTable">
                                             <tr>
-                                                <th>경험치</th>
-                                                <th>등급</th>
+                                                <th>등급 1</th>
+                                                <th>등급 2</th>
+                                                <th>등급 3</th>
+                                                <th>등급 4</th>
+                                                <th>등급 5</th>
                                             </tr>
                                             <tr>
-                                                <td>0~749</td>
                                                 <td><img class="level" src="/img/level/red.png" alt="등급1"></td>
-                                            </tr>
-                                            <tr>
-                                                <td>750~1499</td>
                                                 <td><img class="level" src="/img/level/orange.png" alt="등급2"></td>
-                                            </tr>
-                                            <tr>
-                                                <td>1500~2249</td>
                                                 <td><img class="level" src="/img/level/yellow.png" alt="등급3"></td>
-                                            </tr>
-                                            <tr>
-                                                <td>2250~2999</td>
                                                 <td><img class="level" src="/img/level/mint.png" alt="등급4"></td>
-                                            </tr>
-                                            <tr>
-                                                <td>3000</td>
                                                 <td><img class="level" src="/img/level/purple.png" alt="등급5"></td>
                                             </tr>
+
                                         </table>
                                     </div>
                                 </div>
