--- a/src/main/resources/templates/my/userScrapsActivity.html
+++ b/src/main/resources/templates/my/userScrapsActivity.html
@@ -27,17 +27,17 @@
         <h2 class="myTitle">내 활동</h2>
 
         <div class="d-flex justify-content-center align-items-center nav">
-            <div class="col-4 text-center align-content-center countScrap1">
+            <div class="col-4 text-center align-content-center myPostScr">
                 <a th:href="@{/my/userActivity/{userId}/posts(userId=${userId})}">
                     작성글 <span th:text="${responseDTO?.postCount}"></span>
                 </a>
             </div>
-            <div class="col-4 text-center align-content-center countScrap2">
+            <div class="col-4 text-center align-content-center myReplyScr">
                 <a th:href="@{/my/userActivity/{userId}/replies(userId=${userId})}">
                     댓글 <span th:text="${responseDTO?.replyCount}"></span>
                 </a>
             </div>
-            <div class="col-4 text-center align-content-center countScrap3">
+            <div class="col-4 text-center align-content-center myScrapScr">
                 <a th:href="@{/my/userActivity/{userId}/scraps(userId=${userId})}">
                     보관함 <span th:text="${responseDTO?.scrapCount}"></span>
                 </a>
