--- a/src/main/resources/static/css/error/accessDenied.css
+++ b/src/main/resources/static/css/error/accessDenied.css
@@ -1,4 +1,9 @@
 body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    margin: 0;
     min-width: 1200px;
 }
 
@@ -33,16 +38,16 @@ h5 {
     font-size: 18px;
 }
 
-hr {
-    border: 1px solid #67cafe;
-    margin: 20px 0;
-}
+/*hr {*/
+/*    border: 1px solid #67cafe;*/
+/*    margin: 20px 0;*/
+/*}*/
 
-small {
-    color: #67cafe;
-    white-space: nowrap;
-    font-size: 14px;
-}
+/*small {*/
+/*    color: #67cafe;*/
+/*    white-space: nowrap;*/
+/*    font-size: 14px;*/
+/*}*/
 
 .errorIcon {
     width: 40px;
@@ -58,7 +63,7 @@ hr {
     border: 1px solid #67cafe;
     border-radius: 0.375rem;
     color: #67cafe;
-    width: 400px;
+    width: 300px;
     height: 65px;
 }
 
