--- a/src/main/resources/templates/error/accessDenied.html
+++ b/src/main/resources/templates/error/accessDenied.html
@@ -17,10 +17,8 @@
         <h2><img class="errorIcon" src="/img/error/error_icon.png" alt="에러 아이콘">&nbsp; 요청하신 페이지를 찾을 수 없습니다.</h2>
         <br>
         <h5>※ 링크가 잘못되었거나 페이지가 삭제되었을 수 있습니다.</h5><br>
-        <hr>
-        <small>말랑발자국 홈으로 이동하시겠어요?</small><br>
         <button type="button" class="home-button" th:onclick="|location.href='@{/}'|">
-            말랑발자국 홈
+            말랑발자국 홈으로 이동
         </button>
     </div>
 </div>
